Keep the credentials, and specify origins